[package]
name = "rin_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.24.3"
reqwest = "0.11.11"
select = "0.5.0"
termimage = "1.2.0"
terminal-link = "0.1.0"
terminal_size = "0.2.1"
thirtyfour = "0.31.0"
tokio = "1.20.1"

