[package]
name = "rin_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
home = "0.5.3"
image = "0.24.3"
regex = "1.6.0"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.85"
termimage = "1.2.0"
terminal-link = "0.1.0"
terminal_size = "0.2.1"
thirtyfour = "0.31.0"
tokio = "1.20.1"
which = "4.3.0"

